--- a/courses/templates/courses/contact.html
+++ b/courses/templates/courses/contact.html
@@ -15,9 +15,9 @@
   <body>
         <div class="black">
       <ul class="nav nav-tabs">
-      <li role="presentation" ><a href="{% url 'index'%}">Main</a></li>
-      <li role="presentation" class="active"><a href="{% url 'contact'%}">Contacts</a></li>
-	  <li role="presentation"><a href="{% url 'students:list_view'%}">Students</a></li>
+      <li role="presentation" class="active"><a href="{% url 'index'%}">Main</a></li>
+      <li role="presentation"><a href="{% url 'contact'%}">Contacts</a></li>
+	  <li role="presentation"><a href="{% url 'students:students'%}">Students</a></li>
       </ul>
 	  
       <h1 class="dt">Contacts</h1>
