--- a/templates/index.html
+++ b/templates/index.html
@@ -32,5 +32,5 @@
       {% endfor %}
      </tbody>
   </table>
-
+ <div class="alert alert-success" role="alert">P.S. не пожалеешь!</div>
 {% endblock content %}   
