--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -1,101 +1,63 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-   
-    <title>detail</title>
-   <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}"  rel="stylesheet">
-      
-  </head>
 
-  <body>
-<div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="/">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-	<li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </nav>
-        
-      </div>
-    
-
-      <div class="jumbotron">
-<h3>{{coach.user.first_name}} {{coach.user.last_name}}</h3> 
-
-<table class="table-color">
+{% block title %}PyBursa Main page{% endblock title %}
 
 
-<tr > 
-<td class="bold">дата рождения</a></td>
-<td>{{coach.date_of_birth|date:"N d, Y"}}</td>
+{% block nav_class_index %}active{% endblock %}
+
+
+{% block url_student %}{% url 'students:list_view' %}{% endblock url_student %}
+
+
+{% block content %}
+
+<div class="jumbotron">
+<h3>{{ coach.user.first_name }} {{ coach.user.last_name }}</h3> 
+<table class="table">
+<tr>
+<td class="bold">дата рождения</a></td><td>{{ coach.date_of_birth|date:"d N, Y" }}</td>
 </tr>
-<tr > 
-<td class="bold">почта</a></td>
-<td>{{coach.user.email}}</td>
+<tr> 
+<td class="bold">почта</a></td><td>{{ coach.user.email }}</td>
 </tr>
-<tr > 
-<td class="bold">телефон</a></td>
-<td>{{coach.phone}}</td>
+<tr> 
+<td class="bold">телефон</a></td><td>{{ coach.phone }}</td>
 </tr>
-<tr > 
-<td class="bold">адрес</a></td>
-<td>{{coach.address}}</td>
+<tr> 
+<td class="bold">адрес</a></td><td>{{ coach.address }</td>
 </tr>
-<tr > 
-<td class="bold">логин Skype</a></td>
-<td>{{coach.skype}}</td>
+<tr> 
+<td class="bold">логин Skype</a></td><td>{{ coach.skype }}</td>
 </tr>
 
 {% for course in courses_coach %}
-<tr > 
+<tr> 
 <td class="bold">учитель курса</a></td>
-
 <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a>
-                        students
-                        <a href="{% url 'students:list_view' %}{{course_par}}{{course.id}}">
-                          <button type="button" class="btn btn-default" aria-label="Left Align">
-                            <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
-                          </button>
-                        </a>
-                      </td>
-
+students <a href="{% url 'students:list_view' %}{{course_par}}{{course.id}}">
+ <button type="button" class="btn btn-default" aria-label="Left Align">
+    <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+ </button>
+  </a>
+  </td>
 </tr>
 {% endfor %}
 {% for course_as in courses_assistant %}
-<tr > 
+<tr> 
 <td class="bold">ассистент курса</a></td>
 
-<td><a href="{% url 'courses:detail' course_as.id %}">{{course_as}}</a>
-                      students
-                      <a href="{% url 'students:list_view' %}{{course_par}}{{course_as.id}}">
-                        <button type="button" class="btn btn-default" aria-label="Left Align">
-                          <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
-                        </button>
-                      </a>
-                    </td>
+<td><a href="{% url 'courses:detail' course_as.id %}">{{ course_as }}</a>
+students
+<a href="{% url 'students:list_view' %}{{course_par}}{{course_as.id}}">
+<button type="button" class="btn btn-default" aria-label="Left Align">
+<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+</button>
+</a>
+</td>
 
 </tr>
 {% endfor %}
-  </table>
-      <footer class="footer">
-       
-      </footer>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+</table>
+{% endblock content %}
 ﻿
