--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -1,65 +1,30 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-   
-    <title>detail</title>
-   <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}"  rel="stylesheet">
-      
-  </head>
 
-  <body>
-<div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="/">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-	<li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </nav>
-        
-      </div>
-    
+{% block title %}PyBursa student_detail{% endblock title %}
 
-      <div class="jumbotron">
-<h3>{{name_student.name}} {{name_student.surname}}</h3> 
 
-<table class="table">
+{% block nav_class_students %}active{% endblock %}
 
- <tr>  <th>дата рождения </th> <br> <th>{{name_student.date_of_birth }}</th></tr>
- <tr>  <th>адрес </th> <br> <th>{{name_student.address }}</th></tr>
- <tr>  <th>почта </th> <br> <th>{{name_student.email }}</th></tr>
- <tr>  <th>skype </th> <br> <th>{{name_student.skype }}</th></tr>
- <tr>  <th>телефон </th> <br> <th>{{name_student.phone }}</th></tr>
 
-<tr>
-<td>курсы</td>
-<table  class="table" >
-{% for course in name_student.courses.all %}
-<td>
-<a href="{% url 'courses:detail' course.id %}">{{course}}</a>
-</td>
-{% endfor %}
+{% block url_student %}{% url 'students:list_view' %}{{ id_c }}{% endblock url_student %}
+
+
+{% block content %}
+<div class="jumbotron">
+  <h3>{{name_student.name}} {{name_student.surname}}</h3> 
+  <table class="table">
+    <tr><td>дата рождения </td> <br> <td>{{name_student.date_of_birth }}</td></tr>
+    <tr><td>адрес </td> <br> <td>{{name_student.address }}</td></tr>
+    <tr><td>почта </td> <br> <td>{{name_student.email }}</td></tr>
+    <tr><td>skype </td> <br> <td>{{name_student.skype }}</td></tr>
+    <tr><td>телефон </td> <br> <td>{{name_student.phone }}</td></tr>
+    <tr><td>курсы</td>
+      <td><table  class="table" >
+      {% for course in name_student.courses.all %}
+        <a href="{% url 'courses:detail' course.id %}">{{course}}</a> <br>
+      {% endfor %}
+      </table></td>
+    </tr>
 </table>
-</tr>
-</table>
-      <footer class="footer">
-       
-      </footer>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
-﻿
+{% endblock content %}  
