--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -1,73 +1,31 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-   
-    <title>detail</title>
-   <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}"  rel="stylesheet">
-      
-  </head>
 
-  <body>
-<div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li><a href="/">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-	<li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </nav>
-        
-      </div>
-    
+{% block title %}PyBursa student_list{% endblock title %}
 
 
+{% block nav_class_students %}active{% endblock %}
 
 
-      <div class="jumbotron">
-<h3>Список студентов</h3> 
-
- <table  class="table" >
- <tr><th>#</th><th>Фамилия имя</th><th>Адрес</th><th>Skype</th><th>Курсы</th></tr> 
-{% for i in name_stud %}
-
-<td>{{i.id}}</td>
-<td><a href="{% url 'students:detail' i.id %}">{{i.name}} {{i.surname}}</a></td>
-<td>{{i.address}}</td>
-<td>{{i.skype}}</td>
-
-<td>
-<table  class="table" >
-{% for course in i.courses.all %}
-<tr><td>
-<a href="{% url 'courses:detail' course.id %}">{{course}}</a>
-</td></tr>
-{% endfor %}
-</table>
-</td>
-
-
- </tr>
-{% endfor %}
+{% block content %}
+<div class="jumbotron">
+  <h3>Список студентов</h3> 
+  <table class="table">
+    <tr><th>#</th><th>Фамилия имя</th><th>Адрес</th><th>Skype</th><th>Курсы</th></tr> 
+    {% for i in name_stud %}
+      <td>{{i.id}}</td>
+      <td><a href="{% url 'students:detail' i.id %}">{{i.name}} {{i.surname}}</a></td>
+      <td>{{i.address}}</td>
+      <td>{{i.skype}}</td>
+      <td><table  class="table" >
+      {% for course in i.courses.all %}
+        <tr><td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td></tr>
+      {% endfor %}
+      </table></td>
+      </tr>
+    {% endfor %}
   </table>
+{% endblock content %}
+      
 
-      <footer class="footer">
-       
-      </footer>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
 ﻿
