--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,86 +1,59 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <title>Professors</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
-
-  </head>
-
-  <body>
+{% block title %}PyBursa Professors{% endblock title %}
 
 
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li><a href="/">Main</a></li>
-            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-						<li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </nav>
-        
-      </div>
+{% block nav_class_contact %}active{% endblock %}
 
 
-  
+{% block url_student %}{% url 'students:list_view' %}{% endblock url_student %}
+
+
+{% block content %}
 <div class="page-header">
   <h1>Peritorum</h1>
 </div>
    
 <div class="media">
-		
   <div class="media-left media-middle">
-      <img class="media-object" src="../static/images/Director.jpg" alt="..." width="150" height="200">
-   </div>
+    <img class="media-object" src="../static/images/Director.jpg" alt="..." width="150" height="200">
+  </div>
   <div class="media-body">
     <h4 class="media-heading">Director</h4>
-    <p>Name: Альбус Персиваль Вулфрик Брайан Дамблдор</p>
-	<p>Skype: magnamagus</p>
-<p> Email: magnamagus@sova.com</p>
-<p>Phone : 1234567890</p>
+      <p>Name: Альбус Персиваль Вулфрик Брайан Дамблдор</p>
+      <p>Skype: magnamagus</p>
+      <p>Email: magnamagus@sova.com</p>
+      <p>Phone: 1234567890</p>
   </div>
 
-<div class="media-left media-middle">
-      <img class="media-object" src="../static/images/Manager.jpg" alt="..." width="150" height="200">
-   </div>
+  <div class="media-left media-middle">
+     <img class="media-object" src="../static/images/Manager.jpg" alt="..." width="150" height="200">
+  </div>
   <div class="media-body">
     <h4 class="media-heading">Manager</h4>
     <p>Name: Долорес Джейн Амбридж</p>
-	<p>Skype: ulceris</p>
-	<p> Email: ulceris@sova.com</p>
-	<p>Phone : 1234567890</p>
+    <p>Skype: ulceris</p>
+    <p>Email: ulceris@sova.com</p>
+    <p>Phone: 1234567890</p>
   </div>
 
-<div class="media-left media-middle">
-      <img class="media-object" src="../static/images/Founder.jpg" alt="..." width="150" height="200">
-   </div>
+  <div class="media-left media-middle">
+    <img class="media-object" src="../static/images/Founder.jpg" alt="..." width="150" height="200">
+  </div>
   <div class="media-body">
     <h4 class="media-heading">Founder</h4>
     <p>Name: Северус Снегг</p>
-	<p>Skype: lanistaMilvum</p>
-<p> Email: lanistaMilvum@sova.com</p>
-<p>Phone : 1234567890</p>
+    <p>Skype: lanistaMilvum</p>
+    <p>Email: lanistaMilvum@sova.com</p>
+    <p>Phone: 1234567890</p>
   </div>
 </div>
-
+{% endblock content %}
 
      
 
    
 
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
 ﻿
