--- a/templates/index.html
+++ b/templates/index.html
@@ -1,67 +1,29 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-   
-    <title>My</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}"  rel="stylesheet">
-
-    
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="/">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-	<li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </nav>
-        
-      </div>
-
-      <div class="jumbotron">
-<h1>HogwBursa</h1>        
-<h2>Description</h2>
-        <p class="lead">Язык программирования Python (волш. Василиск) — это мощный инструмент для создания программ самого разнообразного назначения, доступный даже для маглов.  </p>
-        
-      </div>
+{% block title %}PyBursa Main page{% endblock title %}
 
 
-     <div class="jumbotron">
-<h3>Kurs</h3>
- <table>
- <tr>  <th>Курс </th> <th>Описание</th> </tr>
- 
-	{% for course in courses %} 
-	 <tr> <td><a href="{% url 'courses:detail' course.id %}">{{course}} </a> </td> <br> <td>{{course.short_description}} </td></tr>
-	{% endfor %}
-  
- </table>
-         
-        </div>
-      </div>
-    </div> <!-- /container -->
+{% block nav_class_index %}active{% endblock %}
 
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
-﻿
+{% block url_student %}{% url 'students:list_view' %}{% endblock url_student %}
+
+
+{% block content %}
+<div class="jumbotron">
+  <h1>HogwBursa</h1>        
+  <h2>Description</h2>
+  <p class="lead">Язык программирования Python (волш. Василиск) — это мощный инструмент для создания программ самого разнообразного назначения, доступный даже для маглов.  </p>
+</div>
+      
+ <div class="jumbotron">
+  <h3>Kurs</h3>
+  <table>
+  <tr><th>Курс </th> <th>Описание</th> </tr>
+  {% for course in courses %} 
+  <tr> <td><a href="{% url 'courses:detail' course.id %}">{{ course|upper }} </a> </td> <br> <td>{{ course.short_description|title }} </td></tr>
+  {% endfor %}
+  </table>
+</div>
+{% endblock content %}
