--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
+
+{% load staticfiles %}
+
+
 {% block title %}PyStudent{% endblock title %}
+
+
 {% block content %}
   <div class="jumbotron">
     <div class="container">
