--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
-{% block title %}PyStudents{% endblock title %}
-{% block content %}
 
+
+{% load staticfiles %}
+
+
+{% block title %}PyStudents{% endblock title %}
+
+
+{% block content %}
   <div class="jumbotron">
     <div class="container">
       <h1>Cтуденты PyBursa текущего набора</h1>
