--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -32,7 +32,7 @@
 <div class="container">
 <div class="panel-color jumbotron">
 <div>Квадратное уравнение a*x*x + b*x + c = 0</div><br>
-<form>
+<form method="get">
 	
 	{{ form.as_p }}
 	<input type="submit" />
