--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -11,8 +11,12 @@
 
 
 {% block content %}
-    {% include "courses/include/detail_include.html" %}
-    
+    <div class="jumbotron">
+      <div class="container">
+        <div class="page-header">
+        </div>
+      </div> 
+    </div> 
     <h1>{{ course }}</h1>
     <h3>{{ course.description|truncatechars:32 }}<h3> 
     <h2>План курса</h2>
@@ -32,44 +36,33 @@
            <td>{{ lesson.description }}</td>
           </tr>
         {% endfor %}
-        
       </tbody>
     </table>
     <table class="table table-hover">
       <thead>
         <tr>
           <th>Учитель</th>
-          
         </tr>
       </thead>
       <tbody>
-      
-          <tr>
-           <td><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.first_name }} {{ course.coach.last_name }}</a></td>
-           
-           <td>{{ course.coach.description }}</td>
-          </tr>
-        
-        
-       </tbody>
+        <tr>
+          <td><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.first_name }} {{ course.coach.last_name }}</a></td>
+          <td>{{ course.coach.description }}</td>
+        </tr>
+      </tbody>
     </table>
     <table class="table table-hover">
       <thead>
         <tr>
           <th>Ассистент</th>
-          
         </tr>
       </thead>
       <tbody>
-      
-          <tr>
-           <td><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.first_name }} {{ course.assistant.last_name }}</a></td>
-           
-           <td>{{ course.assistant.description }}</td>
-          </tr>
-        
-        
-       </tbody>
+        <tr>
+          <td><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.first_name }} {{ course.assistant.last_name }}</a></td>
+          <td>{{ course.assistant.description }}</td>
+        </tr>
+      </tbody>
     </table>
 {% endblock content %}    
     
