--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,5 +1,39 @@
- <p> Квадратное уравнение a*x*x + b*x + c = 0 </p>
-  
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="">
+    <title>Quadratic</title>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
+    <script src="{% static 'assets/js/ie-emulation-modes-warning.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/mine.js' %}"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+  </head>
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="{% block nav_main %}{% endblock nav_main %}"><a href="{% url 'index' %}">Main</a><li>
+                <li class="{% block nav_contacts %}{% endblock nav_contacts %}"><a href="{% url 'contact' %}">Contacts</a><li>
+                <li class="{% block nav_students %}{% endblock nav_students %}"><a href="{% url 'students:list' %}">Students</a><li>
+                <li class="active"><a href="/">Results</a><li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+    </br></br></br></br></br>
+<div class="container">
+ <p> Квадратное уравнение a*x*x + b*x + c = 0 </p>  
   <form method="get">
   {% csrf_token %}
   {{form.as_p}}
@@ -13,3 +47,8 @@
   {% if message %}
   <p>{{ message }}</p>
   {% endif %}
+  </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  </body>
+</html>
