--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -7,7 +7,7 @@
 {% block title %}PyBursa{% endblock title %}
 
 
-{% block spec_link %}<a href="{% url 'students:list' %}?course_id={{ course.id }}">{% endblock spec_link %}
+{% block spec_link %}?course_id={{ course.id }}{% endblock spec_link %}
 
 
 {% block content %}
