--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
 {% load staticfiles %}
 
 
+{% block title %}PyBursaMain{% endblock title %}
+
+
 {% block blow_main %}active{% endblock blow_main %}
 
 
