--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}PyBursa{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -16,14 +16,13 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
          <li class="{% block blow_main %}{% endblock blow_main %}">
-                    <a href="{% url 'index' %}">Главная</a></li>
+                    <a href="{% url 'index' %}">Main</a></li>
          <li class="{% block blow_contact %}{% endblock blow_contact %}">
-                    <a href="{% url 'contact' %}">Контакты</a></li>
+                    <a href="{% url 'contact' %}">Contacts</a></li>
          <li class="{% block blow_students %}{% endblock blow_students %}">
-         {% block spec_link %}<a href="{% url 'students:list' %}">
-         {% endblock spec_link %}Студенты</a></li>
+                    <a href="{% url 'students:list' %}{% block spec_link %}{% endblock spec_link %}">Students</a></li>
+                 
          
-         </li>
         </ul>
    
       </div><!-- /.navbar-collapse -->
