--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -16,7 +16,7 @@
 <h3>{{ coach.user.first_name }} {{ coach.user.last_name }}</h3> 
 <table class="table">
 <tr>
-<td class="bold">дата рождения</a></td><td>{{ coach.date_of_birth|date:"d N, Y" }}</td>
+<td class="bold">дата рождения</a></td><td>{{ coach.date_of_birth|date:"d F, Y" }}</td>
 </tr>
 <tr> 
 <td class="bold">почта</a></td><td>{{ coach.user.email }}</td>
