--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -14,10 +14,12 @@
 <h1>{{ course.name }}</h1> 
 <p class="lead">{{ course.description|truncatechars:32 }} </p>
 
-{% include "include/instructor_include.html" with block_title="Учитель" instructor=course.coach %}
+
+{% include "include/instructor_include.html" with block_title="Преподаватель" instructor=course.coach %}
 
 
-{% include "include/instructor_include.html" with block_title="Ассистент курса" instructor=course.assistant %}
+{% include "include/instructor_include.html" with block_title="Ассистент" instructor=course.assistant %}
+
    
 <div class="jumbotron">
   <h3>План курса</h3> 
