--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -34,7 +34,7 @@
       </tr>
       <tr>
         <td>курсы учитель </td>
-        {% include "coaches/include/coach_include.html" %}
+        {% include "include/coach_include.html" %}
       </tr>
     </tbody>
   </table>
