--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -2,9 +2,12 @@
 {% block title %}Students{% endblock %}
 {% block active_menu_students %}active{% endblock %}
 {% block content %}
+
     <div class="jumbotron">
         <h1 class="center">Students list</h1>
     </div>
+    {% include 'include/message.html' %}
+    <a href="{% url 'students:add' %}">Создать нового студента</a>
     <table class="table">
         <caption>Студенты курса</caption>
         <tr>
@@ -13,11 +16,12 @@
             <th>Address</th>
             <th>Skype</th>
             <th>Courses</th>
+            <th>Control</th>
         </tr>
             {% for student in students %}
             <tr>
                 <td> {{ student.id }} </td>
-                <td><a href="{% url 'students:detail' student.id %}">{{ student.name }} {{ student.surname }}</a></td>
+                <td><a href="{% url 'students:detail' student.id %}">{{ student.fullname }}</a></td>
                 <td> {{ student.address }} </td>
                 <td> {{ student.skype }} </td>
                 <td>
@@ -25,6 +29,11 @@
                         <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
                     {% endfor %}
                 </td>
+                <td>
+                    <a href="{% url 'students:edit' student.id %}">Изменить</a>
+                    <a href="{% url 'students:delete' student.id %}">Удалить</a>
+                </td>
+
             </tr>
             {% endfor %}
     </table>
