--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -25,32 +25,19 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body >
-   
-	
+  <body>
 
 <div class="container">
 <div class="panel-color jumbotron">
-<div>Квадратное уравнение a*x*x + b*x + c = 0</div><br>
+<p>Квадратное уравнение a*x*x + b*x + c = 0</p>
 <form method="get">
-	
 	{{ form.as_p }}
-	<input type="submit" />
+	<input type="submit"/>
 </form>
-<!--<ul>
-  <li>a = {{a}}<br>
-  {{a_error}}</li>
-  <li>b = {{b}}<br> 
-  {{b_error}}</li>
-  <li>c = {{c}}<br> 
-  {{c_error}}</li>
-</ul>-->
-<div>{{ d }}</div><br>
+
+<p>{{ d }}</p>
   
-<div>{{ mes }}</div>
-	
-
-
+<p>{{ mes }}</p>
  
 </div>
 </div>
