--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -6,7 +6,7 @@
     <div class="jumbotron">
         <h1 class="center">Students list</h1>
     </div>
-    {% include 'include/message.html' %}
+    {% include 'include/message_include.html' %}
     <a href="{% url 'students:add' %}">Создать нового студента</a>
     <table class="table">
         <caption>Студенты курса</caption>
