--- a/templates/base.html
+++ b/templates/base.html
@@ -22,5 +22,6 @@
     </div>
     {% endblock %}
     {% block content %}{% endblock %}
+    {% include 'include/footer_include.html' %}
 </body>
 </html>
