--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -4,7 +4,7 @@
     <div class="jumbotron">
         <h2 class="center">Редактирование данных студента</h2>
     </div>
-{% include 'include/message.html' %}
+{% include 'include/message_include.html' %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
