--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -12,7 +12,7 @@
 	<h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
 	<form method="get">
 		{{ form.as_p }}
-		<input type="submit" value="Решить">
+		<input type="submit" value="Решить"/>
 		<br />
 		<br />
 		{% if d %}
