--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,10 @@
               <span class="icon-bar"></span>
           </button>
 
-          <a href="{% url 'index' %}">Main</a>
-          <a href="{% url 'contact' %}">Contacts</a>
-          <a href="{% url 'students:list_view' %}">Students</a>
-          <a href="{% url 'quadratic_start' %}">QE</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Main</a>
+          <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
+          <a class="navbar-brand" href="{% url 'students:list_view' %}">Students</a>
+          <a class="navbar-brand" href="{% url 'quadratic_results' %}">QE</a>
         </div>
         
         <div class="navbar-collapse collapse" id="navbar">
