--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,7 +1,16 @@
-{% extends "students/base.html" %}
+{# {% extends "students/base.html" %} #}
+
+
+{% extends "base.html" %}
 
 
 {% load staticfiles %}
+
+
+{% block title %}Students{% endblock title%}
+
+
+{% block navbar_i3 %}active{% endblock navbar_i3 %}
 
      
 {% block content %}  
