--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,17 +1,39 @@
-<meta charset="utf-8">
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{% endblock title %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+  </head>
+  <body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+           <li><a href="{% url 'index' %}">Main</a><li>
+           <li><a href="{% url 'contact' %}">Contacts</a><li>
+           <li><a href="{% url 'students:list' %}">Students</a><li>
+           <li class="active"><a href="/">Results</a><li>
+         </ul>
+   
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 <h4> Квадратное уравнение a*x*x + b*x +c = 0</h4>
+
 <div>
-    <ul>
-        <li>a = {{a}}
-        {{erra}}
-        </li>
-        <li>b = {{b}}
-        {{errb}}
-        </li>
-        <li>c = {{c}}
-        {{errc}}
-        </li>
-    </l>
+    <form method='get'>
+        {{ form.as_p }}
+        <input type='submit' value='Решить' />
+     
+    
     <h3>{{d}}</h3>
     <h3>{{x}}<h3>
 </div>
+</body>
+</html>
