--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -12,7 +12,9 @@
 
 {% block content %}
   <div class="container">
-      {% include "courses/include/course_include.html" %}
+
+      {% include "include/course_include.html" %}
+
       <div class="starter-template">
         <div class="container">
               <h2>{{ course.name }} course details</h2>
