--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 {% block jumbotron %}
 
 
-{% include "include/inc_ooniversity.html" %}
+{% include "include/course_include.html" %}
        
        
         <p class="starter-regullar">
