--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -13,10 +13,10 @@
 {% block jumbotron %}
         
       
-        {% include "include/inc_ooniversity.html" %}
-        <h2 class="course">{{ course.name }} course details</p>
-        <p class="course">{{ course.description|truncatechars:32 }}</h3>
-        <h2 class="course">Teachers</h3>
+        {% include "include/course_include.html" %}
+        <h2 class="course">{{ course.name }} course details</h2>
+        <p class="course">{{ course.description|truncatechars:32 }}</p>
+        <h2 class="course">Teachers</h2>
         <div class="row">
           <div class="col-sm-4">
             <div class="panel panel-default">
@@ -41,7 +41,7 @@
               </div>
             </div>
           </div>
-          <h2 class="course">Course plan</h3>
+          <h2 class="course">Course plan</h2>
           <div class="row">
             <div class="col-sm-8">
               <table class="table table-striped table table-bordered">
