--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -13,6 +13,25 @@
   </head>
 
   <body>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li class="{% block nav_main %}{% endblock nav_main %}"><a href="{% url 'index' %}">Main</a><li>
+              <li class="{% block nav_contacts %}{% endblock nav_contacts %}"><a href="{% url 'contact' %}">Contacts</a><li>
+              <li class="{% block nav_students %}{% endblock nav_students %}"><a href="{% url 'students:list' %}">Students</a><li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
 
      <div class="container">
        <h2>Equation</h2>
