--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock title %}</title>
+    <title>Quarratic</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -18,7 +18,7 @@
            <li><a href="{% url 'index' %}">Main</a><li>
            <li><a href="{% url 'contact' %}">Contacts</a><li>
            <li><a href="{% url 'students:list' %}">Students</a><li>
-           <li class="active"><a href="/">Results</a><li>
+           <li<a href="/">Results</a><li>
          </ul>
    
       </div><!-- /.navbar-collapse -->
@@ -28,12 +28,16 @@
 
 <div>
     <form method='get'>
+        
         {{ form.as_p }}
         <input type='submit' value='Решить' />
-     
-    
-    <h3>{{d}}</h3>
-    <h3>{{x}}<h3>
+    </form>
+    {% if d %}
+        <h3>{{d}}</h3>
+    {% endif %}
+    {% if x %}
+        <h3>{{x}}<h3>
+    {% endif %}
 </div>
 </body>
 </html>
