--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -14,7 +14,7 @@
             <tbody>
                 <tr>
                   <td>Birth date</td>
-                  <td>{{student.birth_date}}</td>
+                  <td>{{student.date_of_birth|date:"d F, Y"}}</td>
                 </tr>
                 <tr>
                   <td>Address</td>
