--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -11,33 +11,31 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   </head>
   <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-           <li><a href="{% url 'index' %}">Main</a><li>
-           <li><a href="{% url 'contact' %}">Contacts</a><li>
-           <li><a href="{% url 'students:list' %}">Students</a><li>
-           <li<a href="/">Results</a><li>
-         </ul>
-   
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-<h4> Квадратное уравнение a*x*x + b*x +c = 0</h4>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="{% url 'index' %}">Main</a><li>
+            <li><a href="{% url 'contact' %}">Contacts</a><li>
+            <li><a href="{% url 'students:list' %}">Students</a><li>
+            <li><a href="/">Results</a><li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <h4> Квадратное уравнение a*x*x + b*x +c = 0</h4>
 
-<div>
-    <form method='get'>
-        
+    <div>
+      <form method='get'>
         {{ form.as_p }}
         <input type='submit' value='Решить' />
-    </form>
-    {% if d %}
+      </form>
+      {% if d %}
         <h3>{{d}}</h3>
-    {% endif %}
-    {% if x %}
+      {% endif %}
+      {% if x %}
         <h3>{{x}}<h3>
-    {% endif %}
-</div>
-</body>
+      {% endif %}
+    </div>
+  </body>
 </html>
