--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Quarratic</title>
+    <title>Quadratic</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -27,6 +27,7 @@
 
     <div>
       <form method='get'>
+        {% csrf_token %}
         {{ form.as_p }}
         <input type='submit' value='Решить' />
       </form>
