Added include template

--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -7,6 +7,9 @@
 {% block nav-class-students %}active{% endblock nav-class-students %}
 
 {% block content %}
+
+{% include "include/oouniversity_include.html" with block_title="Current course students" block_description="This is our students, hope they are happy" block_subtitle="" %}
+
 			<div class="col-md-6">
           <table class="table table-striped">
             <thead>
