--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,6 +7,7 @@
 {% block nav-class-contact %} active {% endblock nav-class-contact %}
 
 {% block content %}
+{% include "include/oouniversity_include.html" with block_title="Course contacts" block_description="This is contact page." block_subtitle="Our mega-giga cool stuff" %}
 
 		<div class="container">
       <div class="row">
@@ -20,7 +21,7 @@
         </div>
 
         <div class="col-md-4">
-					<img src="{% static 'images/teacher.jpg' %}" alt="Radchenko Alex">
+					<img src="{% static 'images/teacher.jpg' %}" alt="Radchenko Alex" >
           <h2>Director</h2>
           <p>Name: <b class="marker">Alexey Radchenko</b></p>
           <p>Skype: <b class="marker">superuser.do</b></p>
@@ -28,7 +29,7 @@
           <p>Phone: <b class="marker">+380-234-5****</b></p>
         </div>
 	      <div class="col-md-4">
-					<img src="{% static 'images/assistant.jpg' %}" alt="Persianova Olena">
+					<img src="{% static 'images/assistant.jpg' %}" alt="Persianova Olena" width="150">
 	        <h2>Manager</h2>
 	       	<p>Name: <b class="marker">Olena Persianova</b></p>
           <p>Skype: <b class="marker">real_test_skype</b></p>
