--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}<title>Coach details</title>{% endblock title%}
+{% block title %}Coach details{% endblock title%}
 
 {% block nav-class-index %}active{% endblock nav-class-index %}
 
