--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,9 +2,9 @@
 
 {% load staticfiles %}
 
-{% block title %}<title>Course contacts</title>{% endblock title %}
+{% block title %}Course contacts{% endblock title %}
 
-{% block nav-class-contact %} active {% endblock nav-class-contact %}
+{% block nav-class-contact %}active{% endblock nav-class-contact %}
 
 {% block content %}
 {% include "include/oouniversity_include.html" with block_title="Course contacts" block_description="This is contact page." block_subtitle="Our mega-giga cool stuff" %}
