--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}<title>Course detail</title>{% endblock title %}
+{% block title %}Course detail{% endblock title %}
 
 {% block nav-class-index %}active{% endblock nav-class-index %}
 
