--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -3,7 +3,7 @@
 
 {% load staticfiles %}
 
-{% block title %}<title>Student detail</title>{% endblock title %}
+{% block title %}Student detail{% endblock title %}
 
 {% block nav-class-students %}active{% endblock nav-class-students %}
 
