--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}<title>Students</title>{% endblock title %}
+{% block title %}Students{% endblock title %}
 
 {% block nav-class-students %}active{% endblock nav-class-students %}
 
