--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-		{% block title %}<title>Course main page</title>{% endblock title %}
+		<title>{% block title %}{% endblock title %}</title>
 	</head>
 	<body>
   		<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -27,34 +27,6 @@
       </nav>
 
 		<div class="container theme-showcase" role="main">
-{% block content %}
-
-{% include "include/oouniversity_include.html" with block_title="PyBursa" block_description="In this course we shifted the emphasis towards the practice.It will be a moderate amount of theory - maximum of practice. Courses will take place from October 19 to December 28. Practical lessons in the classroom + online lectures." block_subtitle="Description" %}
-
-	     <div class="page-header">
-        <h1>Program</h1>
-      </div>
-			<div class="col-md-6">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for course in courses_list %}
-                <tr>
-                  <td><a href="/courses/{{ course.id }}/">{{ course.name|upper }}</a></td>
-                  <td>{{course.short_description|title}}</td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-{% endblock content %}
-		</div>
-
+{% block content %}{% endblock content %}
 	</body>
 </html>
