--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -18,6 +18,7 @@
 			</ul>
 			{% endif %}
 			<h2 class='possition'>Our students</h2>
+			<a href="{% url 'students:create' %}"><input type="buttom" value="Добавить нового студента" class="btn btn-primary"></a>
 			<div class='grey'>
 				<table class='table'>
 					<tr class='title_table'>
@@ -38,13 +39,12 @@
 									{% endif %}
 								{% endfor %}
 							</td>
-							<td><a href="{% url 'students:edit' student.id %}"><input type="buttom" value="Edit student" class="btn btn-primary"></a></td>
-							<td><a href="{% url 'students:remove' student.id %}"><input type="buttom" value="Delete" class="btn btn-primary"></a></td>
+							<td><a href="{% url 'students:edit' student.id %}"><input type="buttom" value="Изменить" class="btn btn-primary"></a></td>
+							<td><a href="{% url 'students:remove' student.id %}"><input type="buttom" value="Удалить" class="btn btn-default"></a></td>
 						</tr>
 					{% endfor %}
 				</table>
 			</div>
-			<a href="{% url 'students:create' %}"><input type="buttom" value="Add student" class="btn btn-primary"></a>
 
 	{% endblock students %}
 	
