--- a/quadratic/templates/equation.html
+++ b/quadratic/templates/equation.html
@@ -4,13 +4,15 @@
 {% load staticfiles %}
 
 
-{% block title %}Students{% endblock title%}
+{% block title %}Equation{% endblock title%}
 
 
-{% block navbar_i3 %}active{% endblock navbar_i3 %}
+{% block navbar_i4 %}active{% endblock navbar_i4 %}
 
 
 {% block content %}
+      
+      
       <h1 class="course">Equation</h1>
       <p>Please enter the coefficients bellow</p>
       <div class="row">
@@ -31,4 +33,12 @@
         </div>
         </form>
       </div>
+      
+      <!-- Site footer -->
+      <footer class="footer">
+      
+      </footer>
+      
+    </div>
+    
 {% endblock content %}
