--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
               <a href="{% url 'students:list_view' %}">Students</a>
             </li>
             <li class="{% block navbar_i4 %}{% endblock navbar_i4 %}">
-              <a href="{% url 'equation' %}">Equotion</a>
+              <a href="{% url 'result' %}">Equotion</a>
             </li>
           </ul>
         </div>
