--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -13,7 +13,7 @@
 			{% if messages %}
 			<ul class="messages">
     			{% for message in messages %}
-    				<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    				<li{% if message.tags %} class="{{ message.tags }}"{% endif %}><h3>{{ message }}</h3></li>
     			{% endfor %}
 			</ul>
 			{% endif %}
