--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -27,7 +27,7 @@
 
   <h2>Редактирование данных студента</h2>
   <br>
-  <form method='POST'>
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Изменить">
