--- a/templates/students/remove.html
+++ b/templates/students/remove.html
@@ -27,7 +27,7 @@
 
   <h2>Студент {{ student.name }} {{ student.surname }} будет сейчас удален.</h2>
   <br>
-  <form method='POST'>
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Удалить">
