--- a/templates/students/add.html
+++ b/templates/students/add.html
@@ -20,7 +20,7 @@
 
   <h2>Создание нового студента</h2>
   <br>
-  <form method='POST'>
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Создать">
