--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -26,8 +26,7 @@
         <form method="post">
         	{% csrf_token %}
 		  {{ model_form.as_p }}		
-		  <button type="submit" class="btn btn-primary">Изменить</button>
+		  <input type="submit" value="Изменить" />
 		</form>
-        <p></p>
     </div>
 {% endblock content %}
