--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -21,7 +21,7 @@
         </div>        
         {% endif %} 
       <br>  
-      <a href="{% url 'students:create' %}">
+      <a href="{% url 'students:add' %}">
       <button type="button" class="btn btn-default">
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add student </button>    
       </a>  
