--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="s12" style="clear:both;">
                             <p class="center-align" style="color: rgba(0, 0, 0, 0.71); margin: 15px;">
-                                {{ course.description|truncatechars:'32' }}
+                                {{ course.description|truncatechars:32 }}
                             </p>
                         </div>
                     </div>
